[package]
name = "good_stv"
version = "0.1.0"
authors = ["Terry Bolt <tbolt@redbrick.dcu.ie>"]
description = "A tool for evaluating elections using Single Transferable Vote."

categories = ["command-line-interface","command-line-utilities","parsing","algorithms"]
homepage = "https://github.com/redbrick/good_stv"
keywords = ["redbrick","vote","cli"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/redbrick/good_stv"

[badges]
travis-ci = { repository = "redbrick/good_stv" }

[dependencies]
clap = "2.27.1"
csv = "1.0.0-beta.5"
env_logger = "0.4.3"
failure = "0.1"
log = "0.3.8"
rand = "0.3.18"
