[package]
name = "good_stv"
version = "0.1.0"
authors = ["Terry Bolt <tbolt@redbrick.dcu.ie>"]
description = "A tool for evaluating elections using Single Transferable Vote."

[lib]
name = "good_stv"

[[bin]]
name = "good_stv"
path = "src/bin/cli.rs"

[[bin]]
name = "good_stv_server"
path = "src/bin/server/main.rs"

[dependencies]
clap = "2.30.0"
csv = "1.0.0-beta.5"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.5.3"
failure = "0.1.1"
log = "0.4.1"
rand = "0.4.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3.6"
features = ["handlebars_templates"]
