[package]
name = "good_stv"
version = "0.1.0"
authors = ["Terry Bolt <tbolt@redbrick.dcu.ie>"]
description = "A tool for evaluating elections using Single Transferable Vote."
edition = "2018"

[lib]
name = "good_stv"

[[bin]]
name = "good_stv"
path = "src/bin/cli.rs"

[[bin]]
name = "good_stv_server"
path = "src/bin/server/main.rs"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32.0"
csv = "1.0.5"
env_logger = "0.6.0"
failure = "0.1.5"
log = "0.4.6"
rand = "0.6.4"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.35"
